agregado el diseño de cuenta bancaria

--- a/cuenta.html
+++ b/cuenta.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>ATM</title>
+    <title>Cuenta Bancaria</title>
 </head>
-
 <body>
     <main>
         <div class="container">
@@ -16,13 +14,12 @@
                 <div class="logo-target">
                     <img class="target" src="img/card.png" alt="card">
                 </div>
-                <input id="input-user" type="text" placeholder="User">
-                <input id="input-password" type="password" placeholder="Password">
-                <input id="input-ingresar" type="button" value="Ingresar" onclick="ingresar()">
+                <input id="consultar" type="button" value="Consultar saldo">
+                <input id="deposito" type="button" value="Depositar">
+                <input id="retiro" type="button" value="Retirar" onclick="ingresar()">
             </div>
         </div>
     </main>
     <script src="js/funciones.js"></script>
 </body>
-
 </html>
