--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </main>
-    <script src="js/funciones.js"></script>
+    <script src="js/init.js"></script>
 </body>
 
 </html>
