--- a/cuenta.html
+++ b/cuenta.html
@@ -5,21 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/init.js"></script>
+    <script defer src="js/cuenta.js"></script>
     <title>Cuenta Bancaria</title>
 </head>
 <body>
     <main>
         <div class="container">
-            <div class="login">
-                <div class="logo-target">
-                    <img class="target" src="img/card.png" alt="card">
-                </div>
-                <input id="consultar" type="button" value="Consultar saldo">
+            <div class="login cuenta">
                 <input id="deposito" type="button" value="Depositar">
                 <input id="retiro" type="button" value="Retirar" onclick="ingresar()">
             </div>
         </div>
     </main>
-    <script src="js/funciones.js"></script>
 </body>
 </html>
