--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/init.js"></script>
     <title>ATM</title>
 </head>
 
@@ -22,7 +23,7 @@
             </div>
         </div>
     </main>
-    <script src="js/init.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
