--- a/cuenta.html
+++ b/cuenta.html
@@ -13,6 +13,11 @@
     <main>
         <div class="container">
             <div class="login cuenta">
+                <div>
+                    <p><span id="user-name" class="user-name"></span></p>
+                    <p><span id="user-cash" class="saldo"></span></p>
+                    <input id="submit" type="text" placeholder="Deposito/retiro">
+                </div>
                 <input id="deposito" type="button" value="Depositar">
                 <input id="retiro" type="button" value="Retirar" onclick="ingresar()">
             </div>
